Revision history for Git-Critic

{{$NEXT}}

          - Add mention for Test::Perl::Critic::Progressive

0.2       2022-01-22 15:51:53 CET
          - Add sponsor information
          - Add CONTRIBUTING.md document

0.1       2022-01-22 15:29:56 CET
          - Only critique lines changed in current branch