@@ -2,6 +2,8 @@ Revision history for Git-Critic
 
 {{$NEXT}}
 
+          - Bugfix: push corrent critique onto reporting list, not entire
+            critique
           - Add mention for Test::Perl::Critic::Progressive
 
 0.2       2022-01-22 15:51:53 CET
